# template-generator

./: CONTRIBUTING.md  DESIGN.md  LICENSE  README.ja.md  README.md  a.py  readme.md  setup.cfg  setup.py
.github/workflows/: format.yml  test.yml
docs/: compatibility.rst  conf.py  how-it-works.rst  index.rst
onlinejudge_contest/: main.py
onlinejudge_prepare/: main.py
onlinejudge_random/: __init__.py
onlinejudge_template/: __about__.py  analyzer.py  main.py  network.py  types.py  utils.py
onlinejudge_template/analyzer/: __init__.py  codeforces.py  combined.py  constants.py  html.py  match.py  minimum_tree.py  node_util.py  output_types.py  parser.py  simple_patterns.py  simplify.py  topcoder.py  typing.py  variables.py
onlinejudge_template/generator/: __init__.py  _cplusplus.py  _main.py  _python.py  _topcoder.py  _utils.py  about.py  common.py  cplusplus.py  hook.py  python.py  topcoder.py  utils.py
onlinejudge_template_resources/: customize_sample.cpp  fastio.cpp  generate.py  template.cpp
onlinejudge_template_resources/template/: customize_sample.cpp  fastio.cpp  generate.cpp  generate.py  main.cpp  main.py  template.cpp  template.py  topcoder.cpp
tests/: analyzer_combined.py  analyzer_constants.py  analyzer_html.py  analyzer_match.py  analyzer_minimum_tree.py  analyzer_simplify.py  analyzer_topcoder.py  analyzer_tree.py  command_prepare.py  command_template.py
