[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Code Generators
    Topic :: Utilities

[options.extras_require]
dev =
    isort == 5.5.2
    mypy == 0.782
    pylint == 2.6.0
    yapf == 0.30.0
doc =
    sphinx >= 2.4
    sphinx-rtd-theme >= 0.4

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[mypy]

[mypy-appdirs.*]
ignore_missing_imports = True

[mypy-bs4.*]
ignore_missing_imports = True

[mypy-colorlog.*]
ignore_missing_imports = True

[mypy-mako.*]
ignore_missing_imports = True

[mypy-onlinejudge.*]
ignore_missing_imports = True

[mypy-ply.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True
